--- a/mt/2019-11-27.md
+++ b/mt/2019-11-27.md
@@ -53,5 +53,13 @@ public ResponseEntity<InputStreamResource> getProductImage(@PathVariable("id") S
     Path file = Paths.get(productImageFileLocation, id + ".png");
 ```
 
-### Story MTHL-18
-#### As a Customer, I want to View tiles of [All Items] in TryHaLa web shop, such that I can view the price and in stock/out of stock of each listed item
+### Pending to discuss
+1. Product
+    * unit price should be nullable?
+    * ref_num use sales provided name
+    * add flag to control display of product name
+2. Customer
+    * age group implementation by SRF_SYS_PARM?
+    * missing password fields
+3.	Sales Order
+    * missing delivery address
